--- a/admin/static/css/default.css
+++ b/admin/static/css/default.css
@@ -91,6 +91,11 @@ hr {
   text-align: center;
   margin: 20px 0px;
 }
+.column {
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+}
 /*****************************************
             REGISTER PAGE
 *****************************************/
@@ -116,7 +121,7 @@ hr {
   margin-bottom: 10px !important;
 }
 .a-spacing-medium {
-  margin-bottom: 18px !important;
+  margin-bottom: 22px !important;
 }
 .registerPage h1 {
   font-family: 'MyWebFont', Arial, sans-serif;
@@ -155,17 +160,17 @@ input[type='tel'],
 input[type='password'],
 input[type='search'],
 textarea {
-  border: 1px solid #a6a6a6;
-  border-top-color: #949494;
-  border-radius: 3px;
-  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5),
-    0 1px 0 rgba(0, 0, 0, 0.07) inset;
+  /* border: 1px solid #a6a6a6; */
+  /* border-top-color: #949494; */
+  /* box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5), */
+  /* 0 1px 0 rgba(0, 0, 0, 0.07) inset; */
   outline: 0;
+  width: 100%;
 }
 .a-input-text.a-form-focus,
 .a-input-text:focus,
-input[type='text'].a-form-focus,
-input[type='text']:focus,
+/* input[type='text'].a-form-focus,
+input[type='text']:focus, */
 input[type='number'].a-form-focus,
 input[type='number']:focus,
 input[type='tel'].a-form-focus,
@@ -178,6 +183,8 @@ textarea.a-form-focus,
 textarea:focus {
   border-color: #e77600;
   box-shadow: 0 0 3px 2px rgba(228, 121, 17, 0.5);
+  outline: 0;
+  width: 100%;
 }
 input[type='password']::placeholder {
   font-weight: 700;
@@ -1536,7 +1543,7 @@ ul li.a-breadcrumb-divider {
   color: #888;
 }
 .bookDescription {
-  margin-bottom: 10px !important;
+  margin-bottom: 8px !important;
   font-family: Arial, sans-serif;
   font-size: 14px;
 }
