--- a/admin/static/css/default.css
+++ b/admin/static/css/default.css
@@ -65,6 +65,7 @@ hr {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  margin-bottom: 15px;
 }
 @media (min-width: 768px) {
   .container {
